Draw background opaquely on MD download items.

Fixes the text rendering bug, as well as a separate rendering bug
evident on custom themes with a non-opaque COLOR_TOOLBAR (similar to
bug 596370)

BUG=600637

Review URL: https://codereview.chromium.org/1857353002

Cr-Commit-Position: refs/heads/master@{#385877}

Former-commit-id: 409085a57835af711f9e917b14e19dc7cf15ef37